tests/lit/tcheck/shadowing_02.isa
// RUN: not %iii --batchmode %s | filecheck %s
// Copyright (C) 2023-2025 Intel Corporation

function F(implicit N : {0..}, x : Bits(N))
begin
    let N := 32;
// CHECK: Type error: variable `N` previously declared
end
